After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733556 - h264 payloader : append packetization-mode parameter for SDP
h264 payloader : append packetization-mode parameter for SDP
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.4.0
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-22 11:45 UTC by Srimanta Panda (trollkarlen)
Modified: 2014-08-08 12:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Append profile-level-i to SDP (1.72 KB, patch)
2014-07-23 07:15 UTC, Srimanta Panda (trollkarlen)
none Details | Review
Append packetization mode to SDP (1.72 KB, patch)
2014-07-23 07:17 UTC, Srimanta Panda (trollkarlen)
none Details | Review
Append packetization mode to SDP (1.72 KB, patch)
2014-07-23 07:17 UTC, Srimanta Panda (trollkarlen)
none Details | Review
Append packetization mode to SDP (1.88 KB, patch)
2014-08-05 11:41 UTC, Srimanta Panda (trollkarlen)
needs-work Details | Review
Append packetization mode to SDP (1.48 KB, patch)
2014-08-06 15:14 UTC, Srimanta Panda (trollkarlen)
committed Details | Review

Description Srimanta Panda (trollkarlen) 2014-07-22 11:45:26 UTC
SDP message from rtsp server doesn't contain the packetization mode.

Append a packetization-mode for the SDP description.
Comment 1 Srimanta Panda (trollkarlen) 2014-07-23 07:15:03 UTC
Created attachment 281457 [details] [review]
Append profile-level-i to SDP
Comment 2 Srimanta Panda (trollkarlen) 2014-07-23 07:17:05 UTC
Created attachment 281458 [details] [review]
Append packetization mode to SDP
Comment 3 Srimanta Panda (trollkarlen) 2014-07-23 07:17:36 UTC
Created attachment 281459 [details] [review]
Append packetization mode to SDP
Comment 4 Srimanta Panda (trollkarlen) 2014-08-05 11:41:23 UTC
Created attachment 282550 [details] [review]
Append packetization mode to SDP

Rebased with recent code.
Comment 5 Tim-Philipp Müller 2014-08-06 11:27:44 UTC
Comment on attachment 282550 [details] [review]
Append packetization mode to SDP

>+#define DEFAULT_PACKETIZATION_MODE      1

This define does not really match our conventions. The other DEFAULT_FOO defines are for GObject properties, but what you're adding here is not a property.

>+    packet_mode = g_strdup_printf ("%d", DEFAULT_PACKETIZATION_MODE);
> ...
>       res = gst_rtp_base_payload_set_outcaps (basepayload,
>+          "packetization-mode", G_TYPE_STRING, packet_mode,
>           "profile-level-id", G_TYPE_STRING, profile,
>           "sprop-parameter-sets", G_TYPE_STRING, sprops->str, NULL);

If it's effectively a constant, you might just as well code it as such in the code, i.e.

>+          "packetization-mode", G_TYPE_STRING, "1",

That's shorter and more readable. I haven't checked yet if we conform to all the constraints implied by this mode yet though.
Comment 6 Srimanta Panda (trollkarlen) 2014-08-06 15:14:01 UTC
Created attachment 282711 [details] [review]
Append packetization mode to SDP
Comment 7 Tim-Philipp Müller 2014-08-08 12:46:23 UTC
Pushed, thanks:

 commit 421b00cd173d48ecb7f4dc52cddedf1ada85ae58
 Author: Srimanta Panda <srimanta@axis.com>
 Date:   Tue Aug 5 11:47:39 2014 +0200

    rtph264pay: append packetization mode parameter to SDP
    
    Append packetization-mode parameter to SDP description.
    Packetization mode signals the properties of an RTP payload type.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733556